# SAE203

./: .gitignore  README.md  diagramme_all.drawio  import.json  manage.py  pyproject.toml  test.json
SAE201App/: apps.py  forms.py  models.py  urls.py  views.py
SAE201App/migrations/: 0001_initial.py  0002_jeu_joueur_rename_auteurs_auteur_commentairejeu.py  0003_categoriejeu_jeu_categorie.py  0004_alter_jeu_auteur_alter_jeu_editeur_alter_jeu_titre.py  0005_alter_jeu_auteur_alter_joueur_mail.py
SAE201App/templates/: index.html
SAE201App/templates/auteurs/: all.html  create.html  edit.html  not_found.html  view.html
SAE201App/templates/categories/: all.html  create.html  edit.html  not_found.html  view.html
SAE201App/templates/commentaires/: all.html  create.html  delete.html  edit.html  not_found.html  view.html
SAE201App/templates/jeux/: all.html  create.html  delete.html  edit.html  import.html  not_found.html  review_import.html  view.html
SAE201App/templates/joueurs/: all.html  commentaire.html  create.html  delete.html  edit.html  not_found.html  view.html
SAE201App/templates/skeletons/: main.html
SAE201App/views/: __init__.py  auteurs.py  categorie.py  commentaire.py  jeu.py  joueur.py
SAE201Project/: asgi.py  settings.py  urls.py  wsgi.py
configs/Linux/Caddy/: Caddyfile
configs/Linux/systemd/: ludotheque.service
configs/Windows/PostgreSQL/: pg_hba.conf  postgresql.conf
schema/: import.schema.json
