[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "SAE2.01"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Julien Mauroy", email = "julien.mauroy@uha.fr"},
    {name = "Thomas Wuillemin", email = "thomas.wuillemin@uha.fr"},
    {name = "Théophile Bouquet", email = "theophile.bouquet@uha.fr"},
]
dependencies = [
    "django>=5.0.6",
    "Pillow>=10.3.0",
]
requires-python = "~=3.10"
readme = "README.md"
license = {text = "None"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
]
